--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>exmxc Audit</title>
+  </head>
+  <body>
+    <h1>exmxc Audit Dashboard</h1>
+  </body>
+</html>
 
