--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
   <h1>exmxc Audit Dashboard</h1>
 
   <div class="input-section">
-    <label for="jobIdInput">Enter Job ID:</label>
-    <input id="jobIdInput" placeholder="e.g. test123" />
-    <button id="loadBtn">Load Result</button>
+    <label for="urlInput">Enter URL to Audit:</label>
+    <input id="urlInput" placeholder="https://example.com" />
+    <button id="startBtn">Run Audit</button>
   </div>
 
   <div id="loading" class="hidden">Loading…</div>
